# chat-system

./: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
chatApp/: 000005.ldb  000008.ldb  000011.ldb  000016.ldb  000018.ldb  000021.ldb  000024.ldb  000029.ldb  LOG  LOG.old  MANIFEST-000007  MANIFEST-000010  MANIFEST-000020  MANIFEST-000023  MANIFEST-000026
chatApp-mrview-29856e6d6c7c438fbaa925dcf4391605/: LOG
components/: BottomBar.tsx  ChatHome.tsx  ChatList.tsx  HomePage.tsx  Login.tsx  NameInput.tsx  Profile.tsx  Register.tsx  SelectContact.tsx  SignIn.tsx  SingleChat.tsx  StartPage.tsx
hooks/: useEventListener.ts
lib/: db.ts  insertServerMsg.ts
my_database/: LOG
pages/: _app.tsx  chat.tsx  index.tsx  test.js
server/: Cargo.toml  Secrets.toml  Shuttle.toml
server/src/: error.rs  get_message.rs  lib.rs  login.rs  main.rs  register.rs  types.rs  updateStatus.rs  user_search.rs  websocket.rs
styles/: globals.css
