
[package]
name = "encryptedapp"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
shuttle-runtime = "0.17.0"
axum = {features=["ws"]}
futures-util = "0.3.26"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
axum-macros = "0.3.5"
secp256k1 = "0.27.0"
hex = "0.4.3"
dotenvy = "0.15"
tokio-postgres = "0.7.8"
tower-http = {version = "0.4.0",features = ["cors"]}
shuttle-axum = "0.17.0"
shuttle-secrets = "0.17.0"
shuttle-shared-db = { version = "0.17.0", features = ["postgres"] }

